@@ -27,7 +27,7 @@ TESTS = regtestsuite
 
 check_PROGRAMS = regtestsuite
 
-regtestsuite_SOURCES = runalltests.cpp
+regtestsuite_SOURCES = runalltests.cpp testparams.cpp
 regtestsuite_LDADD = \
   algebra/libalgebra.a \
   angle/libangle.a \
@@ -42,6 +42,8 @@ regtestsuite_LDADD = \
   utilities/libutilities.a \
   @LIB_ENGINE@ \
   @TESTSUITE_LIBS@
+
+noinst_HEADERS = testparams.h
 
 EXTRA_DIST = README.txt
 
