@@ -31,6 +31,7 @@
 #include <cppunit/Test.h>
 #include <cppunit/TestResult.h>
 #include <cppunit/TextTestProgressListener.h>
+#include "testsuite/testparams.h"
 #include "testsuite/algebra/testalgebra.h"
 #include "testsuite/angle/testangle.h"
 #include "testsuite/census/testcensus.h"
@@ -102,6 +103,7 @@ class ReginaProgress : public CppUnit::TextTestProgressListener {
  */
 bool runAllTests() {
     std::cout << "Regina calculation engine test suite\n\n" << std::flush;
+    checkTestParams();
 
     CppUnit::TextUi::TestRunner runner;
     ReginaProgress progress;
